--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webui-aria2",
+  "name": "aria2-webui",
   "version": "1.0.0",
   "description": "The aim for this project is to create the worlds best and hottest interface to interact with aria2.",
   "homepage": "https://github.com/ziahamza/webui-aria2#readme",
@@ -13,11 +13,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ziahamza/webui-aria2.git"
+    "url": "git+https://github.com/truth1984/aria2-webui.git"
   },
   "bugs": {
-    "url": "https://github.com/ziahamza/webui-aria2/issues"
+    "url": "https://github.com/truth1984/aria2-webui/issues"
   },
+  "forked-from": "https://github.com/ziahamza/webui-aria2.git",
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
@@ -36,7 +37,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
+    "node-sass": "^9.0.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "webpack": "^4.17.1",
