--- a/package.json
+++ b/package.json
@@ -34,20 +34,17 @@
     "lodash": "^4.17.10"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
     "clean-webpack-plugin": "^0.1.19",
-    "husky": "^1.0.0-rc.13",
-    "prettier": "1.14.2",
-    "pretty-quick": "^1.6.0",
-    "node-sass": "^9.0.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
-    "workbox-webpack-plugin": "^3.4.1",
+    "node-sass": "^4.9.3",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.17.1",
     "webpack-bundle-analyzer": "^2.13.1",
-    "file-loader": "^2.0.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "workbox-webpack-plugin": "^3.4.1"
   }
 }
